# Landmining_project_ENSC

./: .gitignore  README.md  augmentation.ipynb  augmentation2.ipynb  knn_random_forest.ipynb  landmining.ipynb  pyproject.toml  visualization.ipynb
FirstDataset/: Augmented_Mine_Dataset.csv  knn_random_forest.ipynb  landmining.ipynb  pyproject.toml
SecondDataset/: Mine2.py
SecondDataset/FinalDatas/: results_00001_16.csv  results_00001_32.csv  results_00001_8.csv  results_0001_16.csv  results_0001_32.csv  results_0001_8.csv  results_001_16.csv  results_001_32.csv  results_001_8.csv  results_conf025.csv  traitement.py
