[tool.poetry]
name = "landmining-project-ensc"
version = "0.1.0"
description = ""
authors = ["Julien"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.3"
seaborn = "0.12.2"
matplotlib = "^3.9.2"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
